archive_old/kubernetes-backup-20260216/cluster/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames:
    - flux-operator.local.smadja.dev
  parentRefs:
    - name: envoy-internal
      namespace: kube-system
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-mcp
spec:
  hostnames:
    - flux-mcp.local.smadja.dev
  parentRefs:
    - name: envoy-internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: flux-operator-mcp
          namespace: flux-system
          port: 9090
